# FlaskYewApp

./: README.md  okteto-pipeline.yml
.github/workflows/: archive.yml  docker-image.yml
k8s/: deployment.yaml  service.yaml
server/: Dockerfile  Procfile  requirements.txt
server/app/: .gitignore  hello.py
server/app/templates/: index.html  ws_test.html
tools/: docker_test.sh  local_k8s.sh  local_start.sh  package-lock.json
ui/: Cargo.toml  README.md  index.html
ui/src/: app.rs  main.rs
ui/src/app/: router.rs  user_inner.rs  websocket.rs
ui/src/app/router/: chat.rs  err_page.rs
